<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBack"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_insert_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Create Class" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:focusedByDefault="false"
        android:text="@string/just_create_your_class_to_manage_daily_attendance_and_report_them_add_students_in_the_next_step"
        android:textColor="@color/text_color_dark" />


    <EditText
        android:id="@+id/subjectName_createClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_back"
        android:focusedByDefault="true"
        android:hint="@string/subject_name"
        android:padding="16dp" />

    <EditText
        android:id="@+id/className_createClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edittext_back"
        android:focusedByDefault="true"
        android:hint="@string/class_name"
        android:padding="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:text="@string/select_class_image"
        android:textColor="@color/text_color_dark"
        android:textSize="18sp" />

    <com.krishna.studentattendance.customradiobutton.RadioRealButtonGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:rrbg_animateDrawables_enter="overshoot"
        app:rrbg_animateTexts_enter="decelerate"
        app:rrbg_bottomLineSize="0dp"
        app:rrbg_dividerColor="@color/black"
        app:rrbg_dividerSize="0dp"
        app:rrbg_radius="10dp"
        app:rrbg_selectorBringToFront="true"
        app:rrbg_selectorColor="@color/theme_light"
        app:rrbg_selectorRadius="1dp"
        app:rrbg_selectorSize="6dp">

        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/math"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawablePadding="8dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black"
            app:rrb_text="Button 1"
            app:rrb_textColor="@color/black" />


        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/physics"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black" />

        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/chemistry"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black" />

        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/biology"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black" />

        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/sanskrit"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black" />

        <com.krishna.studentattendance.customradiobutton.RadioRealButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_drawable="@drawable/general_knowledge"
            app:rrb_drawableHeight="64dp"
            app:rrb_drawableWidth="48dp"
            app:rrb_ripple="true"
            app:rrb_rippleColor="@color/black" />
    </com.krishna.studentattendance.customradiobutton.RadioRealButtonGroup>

    <Button
        android:id="@+id/button_create_student_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/gradient_theme"
        android:padding="8dp"
        android:text="@string/create"
        android:textColor="@color/white" />

</LinearLayout>